# nanocodex

./: .gitignore  HANDOFF.md  LICENSE  README.md  README.zh-CN.md  config.example.toml  mcp.example.toml  nanocodex-gui.cmd  nanocodex.html  pyproject.toml
docs/: ai-coding-agent-design-brief.html
nanocodex/: __init__.py  __main__.py  cli.py  config.py  gui.py
nanocodex/agent/: __init__.py  ab_compare.py  agents_md.py  auto_reasoning.py  compaction.py  enhance_prompt.py  images.py  loop.py  memory_store.py  pricing.py  prompt.py  schedule.py  schedule_runner.py  session.py  session_index.py  skills_store.py
nanocodex/provider/: __init__.py  base.py  deepseek.py
nanocodex/sandbox/: __init__.py  approval.py  executor.py  policy.py
nanocodex/storyboard/: __init__.py  clients.py  models.py  pipeline.py
nanocodex/tools/: __init__.py  apply_patch.py  (+13 more)
scripts/: make-shortcut.ps1
tests/: test_ab_compare.py  test_agents_md.py  test_apply_patch_approval.py  test_auto_reasoning.py  test_cli_schedule.py  test_compaction.py  test_config.py  test_deepseek_provider.py  test_desktop_approver.py  test_enhance_prompt.py  test_gui_file_panel.py  test_gui_settings.py  test_gui_status.py  test_images.py  test_loop.py  test_marketplace.py  test_mcp.py  test_mcp_store.py  test_memory.py  test_patch.py  test_pricing.py  test_resume.py  test_sandbox.py  test_schedule.py  test_schedule_runner.py  test_schedule_tool.py  test_scheduler_plan.py  test_session_fork.py  test_session_index.py  test_skills.py  test_step_approval.py  test_storyboard.py  test_streaming.py  test_web_search.py
(+6 files in other folders)
