[project]
name = "nanocodex"
version = "0.1.0"
description = "A minimal Codex-style coding agent with DeepSeek/OpenAI-compatible backends, MCP, skills, sandbox approvals, and a Windows GUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "openai>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "ddgs>=9.0.0",
    "mcp>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
nanocodex = "nanocodex.cli:app"
nanocodex-gui = "nanocodex.gui:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanocodex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
